Michael Scott scroll text

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,25 +1,21 @@
+$dark-color: #d8b9ff;
+$light-color: rgba(255, 255, 255, 0.87);
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --text-color: white;
+  --background-color: #{$dark-color};
+
+  font-family: "Space Mono", monospace;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: var(--text-color);
+  background-color: var(--background-color);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -28,69 +24,67 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+img {
+  width: 70%;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+h1,
+h3 {
+  width: 30%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.scroll-please,
+.shook {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  h1 {
+    font-size: 3rem;
   }
-  a:hover {
-    color: #747bff;
+  h3 {
+    font-size: 2rem;
   }
-  button {
-    background-color: #f9f9f9;
+}
+.scroll-reveal {
+  padding: 0 2rem;
+  > h2 span,
+  > p span {
+    display: inline;
+    color: #d8b9ff50;
+    background-image: linear-gradient(
+      90deg,
+      var(--text-color),
+      var(--text-color)
+    );
+    background-clip: text;
+    background-size: 0% 100%;
+    background-repeat: no-repeat;
+
+    animation: scrollReveal 4s linear forwards;
+    animation-timeline: view();
+    animation-range: contain;
+  }
+  > h2 span {
+    font-size: 7rem;
+    animation-range-start: 10vh;
+    animation-range-end: 30vh;
+  }
+
+  > p span {
+    font-size: 3rem;
+    animation-range-start: 30vh;
+    animation-range-end: 60vh;
+  }
+}
+
+@keyframes scrollReveal {
+  100% {
+    background-size: 100% 100%;
   }
 }
